hphp/hack/test/typecheck/references/refs_in_array/element_assign2.php.exp
File "element_assign2.php", line 5, characters 8-12:
References are only permitted as function call arguments. (Parsing[1002])
