hphp/hack/test/typecheck/references/refs_in_array/element_assign2.php
<?hh // partial

function test(): void {
  $x = array(42);
  $z = &$x[0];
}
